--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lazy_static = "1.4.0"
 clap = "2.33.0"
+lazy_static = "1.4.0"
+num-traits = "0.2.11"
 duna_macro = { path = "duna_macro"}
