--- a/duna_frontend/Cargo.toml
+++ b/duna_frontend/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["noloerino <jhshi07@gmail.com>"]
 edition = "2018"
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 
 [features]
 default = ["console_error_panic_hook"]
@@ -16,3 +16,6 @@ console_error_panic_hook = { version = "0.1.6", optional = true }
 
 [dependencies.duna]
 path = ".."
+
+[profile.release]
+opt-level = "s"
