--- a/duna_frontend/Cargo.toml
+++ b/duna_frontend/Cargo.toml
@@ -11,8 +11,12 @@ crate-type = ["cdylib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
-wasm-bindgen = "0.2.63"
+wasm-bindgen = "0.2.67"
 console_error_panic_hook = { version = "0.1.6", optional = true }
 
 [dependencies.duna]
 path = ".."
+
+# Fix for https://github.com/rustwasm/wasm-pack/issues/793
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
