--- a/duna_frontend/www/package.json
+++ b/duna_frontend/www/package.json
@@ -13,6 +13,8 @@
     "url": ""
   },
   "dependencies": {
+    "@types/codemirror": "^0.0.102",
+    "codemirror": "^5.59.0",
     "duna_frontend": "file:../pkg"
   },
   "license": "MIT",
