--- a/duna-macro/Cargo.toml
+++ b/duna-macro/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "duna_macro"
+name = "duna-macro"
 version = "0.1.0"
 authors = ["noloerino <jhshi07@gmail.com>"]
 edition = "2018"
