--- a/.github/workflows/rust-cov.yml
+++ b/.github/workflows/rust-cov.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: duna-core
     steps:
       - uses: actions/checkout@v1
       - uses: actions-rs/toolchain@v1
