--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,7 @@
-[package]
-name = "duna"
-version = "0.1.0"
-authors = ["noloerino <jhshi07@gmail.com>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-clap = "2.33.0"
-lazy_static = "1.4.0"
-num-traits = "0.2.14"
-duna_macro = { path = "duna_macro"}
+[workspace]
+members = [
+    "duna-core",
+    "duna-macro",
+    "duna-web",
+]
+exclude = ["fuzz"]
