--- a/duna-web/Cargo.toml
+++ b/duna-web/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "duna_frontend"
+name = "duna-web"
 version = "0.1.0"
 authors = ["noloerino <jhshi07@gmail.com>"]
 edition = "2018"
@@ -13,9 +13,7 @@ default = ["console_error_panic_hook"]
 [dependencies]
 wasm-bindgen = "0.2.68"
 console_error_panic_hook = { version = "0.1.6", optional = true }
-
-[dependencies.duna]
-path = ".."
+duna-core = { path = "../duna-core" }
 
 # Fix for https://github.com/rustwasm/wasm-pack/issues/793
 [package.metadata.wasm-pack.profile.release]
