Add RUSTDOCFLAGS to cov CI (#9)
* Add RUSTDOCFLAGS to cov CI

* Fix cov script; remove -Cpanic

--- a/.github/workflows/rust-cov.yml
+++ b/.github/workflows/rust-cov.yml
@@ -24,7 +24,10 @@ jobs:
           args: --all-features --no-fail-fast
         env:
           CARGO_INCREMENTAL: '0'
-          RUSTFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
+          # Removed -Cpanic=abort
+          # Due to https://github.com/noloerino/duna/pull/9/checks?check_run_id=1610255179
+          RUSTFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Zpanic_abort_tests'
+          RUSTDOCFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Zpanic_abort_tests'
       - id: coverage
         uses: actions-rs/grcov@v0.1
         with:
