--- a/duna-cli/Cargo.toml
+++ b/duna-cli/Cargo.toml
@@ -1,13 +1,16 @@
 [package]
-name = "duna-macro"
+name = "duna-cli"
 version = "0.0.1"
 authors = ["noloerino <jhshi07@gmail.com>"]
 edition = "2018"
+default-run = "duna-cli"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[lib]
-proc-macro = true
+
+[[bin]]
+name = "duna-cli"
+path = "src/main.rs"
 
 [dependencies]
-syn = "1.0"
-quote = "1.0"
+clap = "2.33.0"
+duna-core = { path = "../duna-core" }
