--- a/duna-web/www/package.json
+++ b/duna-web/www/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "codemirror": "5",
+    "duna-web": "../pkg",
     "duna_web": "file:../pkg",
     "golden-layout": "^2.5.0"
   },
